fix: alignment on category icon

--- a/less/category.less
+++ b/less/category.less
@@ -101,6 +101,7 @@
 			.fa-stack {
 				font-size: 90%;
 				border-radius: 50%;
+				vertical-align: -6px;
 			}
 
 			.card .user-icon {
